
	* src/network/exmpp_session.erl: Fix compilation warnings.

	* src/core/exmpp_xml.erl (document_to_list, node_to_list): It's
	possible to give a list of elements to these functions. It allows one
	to use them on the return value of parse_document/1 for instance. It's
	also possible to combine an XML process instruction and an XML
	document, or an XMPP stanza and a stream closing.

2008-07-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl (make_jid, jid_to_string): Add function
	clauses that do the same thing as make_bare_jid and
	bare_jid_to_string.

	* include/exmpp.hrl: Add a macro for the namespace
	'http://jabber.org/protocol/stats'.

2008-07-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add a string version of the Ad-Hoc commands
	namespace. Other namespaces will follow as needed.

	* c_src/extract-known-from-specs, c_src/make-specs-list,
	c_src/extract-known-from-schemas, c_src/make-schemas-urls-list,
	c_src/Makefile.am: Rewrite scripts that fetch and extract official
	namespaces and their element and attribute names. The new scripts are
	now based on the HTML XEP list available here:
	http://www.xmpp.org/extensions/all.shtml
	This list is a lot more up-to-date.

	* c_src/xmpp_ns.h.in-local, c_src/xmpp_names.h.in-local,
	c_src/xmpp_attrs.h.in-local: Removed obsolete templates, now that the
	new scripts understand DTDs.

	* c_src/xmpp_ns.h.in, c_src/xmpp_names.h.in, c_src/xmpp_attrs.h.in:
	Update known lists using the new scripts.

2008-07-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl (get_path): Accept 'cdata_as_list' as a path
	component. Character data are returned as list (instead of binary)
	obviously.

	* src/core/exmpp_presence.erl: Add functions to create subscribe,
	subscribed, unsubscribe, unsubscribed and error presence stanzas. Add
	a function to set the type of a presence stanza.
