@@ -24,7 +24,6 @@ BEAM_FILES = exmpp.app							\
 	     exmpp_client_binding.beam					\
 	     exmpp_client_compression.beam				\
 	     exmpp_client_legacy_auth.beam				\
-	     exmpp_client_presence.beam					\
 	     exmpp_client_privacy.beam					\
 	     exmpp_client_pubsub.beam					\
 	     exmpp_client_register.beam					\
