@@ -24,7 +24,6 @@
         exmpp_client_binding,
         exmpp_client_compression,
         exmpp_client_legacy_auth,
-        exmpp_client_presence,
         exmpp_client_privacy,
         exmpp_client_pubsub,
         exmpp_client_register,
