@@ -24,7 +24,6 @@
 		'@srcdir@/client/exmpp_client_binding',
 		'@srcdir@/client/exmpp_client_compression',
 		'@srcdir@/client/exmpp_client_legacy_auth',
-		'@srcdir@/client/exmpp_client_presence',
 		'@srcdir@/client/exmpp_client_privacy',
 		'@srcdir@/client/exmpp_client_pubsub',
 		'@srcdir@/client/exmpp_client_register',
